# nvsWeidinger

./: meson.build  meson_options.txt
doc/: Settings.aux  doc.aux  doc.bcf  doc.pdfsync  doc.run.xml  doc.tex  doc.toc
include/: materialverwaltung.h
src/client/: main.cpp
src/client/csvFiles/: clientFahr.csv  clientHart.csv  clientImmobilie.csv  clientSeil.csv
src/server/: main.cpp  serverSeil.csv
src/server/csvFiles/: serverFahr.csv  serverImmobilie.csv  serverSeil.csv
