option('cli11_include_dir',
       type: 'string',
       value: '../',
       description: 'the spdlog include dir')

option('spdlog_include_dir',
       type: 'string',
       value: '/home/bernhard/Desktop/vorgabe/software',
       description: 'the spdlog include dir')

option('asio_include_dir',
       type: 'string',
       value: '/home/bernhard/Desktop/vorgabe/software/asio-1.14.0/include',
       description: 'the asio include dir')

option('fmt_include_dir',
       type: 'string',
       value: '/home/bernhard/Desktop/vorgabe/software/fmt-6.1.2/include',
       description: 'the fmt include dir')